--- a/manifest.json
+++ b/manifest.json
@@ -1,13 +1,13 @@
 {
-  "manifest_version": 2,
-  "name": "Yucata Butler",
-  "version": "0.1",
+  "name": "Boardgamegeek - boardgameprices",
+  "description": "Add button to boardgameprices on game pages",
+  "version": "1.0",
+  "manifest_version": 3,
   "content_scripts": [
     {
-    "matches": ["https://www.yucata.de/en/Game/CastlesOfBurgundy/*"],
-    "css": ["styles.css"],
-    "js": ["hotkeys.min.js", "castles-of-burgundy.js"],
-    "run_at": "document_end"
+      "matches": ["https://*.boardgamegeek.com/boardgame/*"],
+      "js": ["scripts.js"]
     }
   ]
 }
+
